<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@color/pink"
              android:gravity="center_horizontal"
              android:layout_height="wrap_content">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="100dp"
            android:paddingStart="100dp"
            android:textColor="@color/blue"
            android:gravity="center_horizontal"
            android:text="@string/usr_name_label"/>
    <com.beardedhen.androidbootstrap.BootstrapEditText
            android:layout_width="match_parent"
            android:id="@+id/entityName"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    <TextView android:layout_width="match_parent"
              android:gravity="center_horizontal"
              android:textColor="@color/blue"
              android:layout_height="wrap_content"
              android:text="@string/usr_nip_label"/>
    <com.beardedhen.androidbootstrap.BootstrapEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bootstrapSize="md"
            android:layout_margin="8dp"
            android:id="@+id/entityNIP"
            android:layout_gravity="top|start"
            android:inputType="phone"
            app:bootstrapBrand="danger"/>


    <TextView android:layout_width="match_parent"
              android:gravity="center_horizontal"
              android:textColor="@color/blue"
              android:layout_height="wrap_content"
              android:text="@string/usr_addr_label"/>
    <com.beardedhen.androidbootstrap.BootstrapEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bootstrapSize="md"
            android:layout_margin="8dp"
            android:id="@+id/entityAddress"
            android:layout_gravity="top|start"
            android:inputType="text"
            app:bootstrapBrand="danger"/>


    <TextView android:layout_width="match_parent"
              android:gravity="center_horizontal"
              android:layout_height="wrap_content"
              android:textColor="@color/blue"
              android:text="@string/usr_postal_label"/>
    <com.beardedhen.androidbootstrap.BootstrapEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bootstrapSize="md"
            android:layout_margin="8dp"
            android:id="@+id/entityPostal"
            android:layout_gravity="top|start"
            android:inputType="text"
            app:bootstrapBrand="danger"/>

    <TextView android:layout_width="match_parent"
              android:gravity="center_horizontal"
              android:layout_height="wrap_content"
              android:textColor="@color/blue"
              android:text="@string/usr_postal_city_label"/>
    <com.beardedhen.androidbootstrap.BootstrapEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bootstrapSize="md"
            android:layout_margin="8dp"
            android:id="@+id/entityCityPostal"
            android:layout_gravity="top|start"
            android:inputType="text"
            app:bootstrapBrand="danger"/>


    <TextView android:layout_width="match_parent"
              android:gravity="center_horizontal"
              android:layout_height="wrap_content"
              android:textColor="@color/blue"
              android:text="@string/usr_phone_num_label"/>

    <com.beardedhen.androidbootstrap.BootstrapEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bootstrapSize="md"
            android:layout_margin="8dp"
            android:id="@+id/entityPhone"
            android:layout_gravity="top|start"
            android:inputType="phone"
            app:bootstrapBrand="danger"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/confirm_add_item_label"
            android:textColor="@color/pink"
            android:id="@+id/addFAB"
            android:background="@color/blue"
            android:layout_gravity="end"
    />

</LinearLayout>